--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -167,6 +167,52 @@ ar:
     motions_can_be_edited: تحرير مقترحاتهم بعد بدء التصويت
     visible_to:
       label: من يستطيع إيجاد هذه المجموعة؟
+      public_html: 'أي أحد <span>المجموعة متاحة للعلن</span>'
+      parent_members_html: 'متاحة للأعضاء في %{parent_group_name} <span>المجموعة غير متاحة للعلن، لكنها ظاهرة لأعضاء %{parent_group_name}</span>'
+      members_html: 'للأعضاء فقط <span>لن يتم إظهار المجموعة</span>'
+    membership_granted_upon:
+      label: كيف يمكن للناس أن ينضموا؟
+      hidden_parent:
+        request_html: 'مفتوحة <span>للأعضاء في %{parent_group_name}</span>'
+        approval_html: 'عند الطلب <span>من قبل الأعضاء في %{parent_group_name}</span>'
+      request_html: مفتوحة <span>يمكن لأي كان أن ينضم للمجموعة</span>
+      approval_html: عند الطلب <span>يمكن لأي كان طلب الإنضمام للمجموعة</span>
+      invitation_html: بالدعوة فقط <span>يجب دعوة الأعضاء الجدد</span>
+    parent_members_can_see_discussions:
+      label: خصوصية النقاش
+      'true': 'أي عضو في %{parent_group_name} يستطيع رؤية النقاشات '
+      'false': رؤية النقاشات محصورة على الأعضاء
+    discussion_privacy_options:
+      label: من يستطيع رؤية النقاشات؟
+      hint: يمكن لأي أحد مشاهدة النقاشات العامة
+      public_only_html: النقاشات العامة فقط
+      public_or_private_html: السماح بالنقاشات بنوعيها العام والخاص
+      private_only_html: النقاشات الخاصة فقط
+    learn_about_permissions: اطلع على المزيد حول سماحيات المجموعة
+  group_permissions:
+    header: سماحيات المجموعة
+    coordinators_can: "يستطيع المنسقون:"
+    c1: تغيير إعدادات المجموعة
+    c2: تحرير عنوان ووصف سياق أي نقاش.
+    c3: نقل النقاشات بين المجموعات.
+    c4: دعوة وقبول أعضاء جدد.
+    c5: إرسال بلاغات بالبريد الإلكتروني لجميع أعضاء المجموعة.
+    c6: إلغاء تفعيل المجموعة.
+    c7: إضافة/إزالة منسقين آخرين.
+    c8: حذف النقاشات.
+    c9: حذف التعليقات.
+    c10: إنشاء مجموعات فرعية.
+    c11: بدء النقاشات.
+    c12: طرح المقترحات.
+    c13: التصويت على المقترحات.
+    members_defaults: "وفقا للإعدادات الافتراضية، يمكن للأعضاء:"
+    m1: حذف التعليقات التي تخصهم.
+    m3: تحرير عنوان ووصف سياق لمقترحات التي يبدأونها قبل أن يبدي أحدهم موقفه من الإقتراح.
+    m4: 'تحرير موعد إغلاق المقترحات التي يبدأونها قبل إغلاقها. '
+    m5: تحرير عنوان ووصف سياق أي نقاش.
+    m6: بدء مجموعة فرعية بحيث يصبحون منسقين فيها.
+    m7: تحرير التعليقات الخاصة بهم في أي وقت.
+    m8: طرح المقترحات والمشاركة بها.
   invite_people: "قم بدعوة الناس"
   edit_memberships: 'عدّل العضويات'
   add_new_member: "أضف عضوا جديدا"
