--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -13,6 +13,15 @@ en:
     started_by: 'Started by <strong>{{name}}</strong>'
 
   discussion:
+    you_like_this: 'You like this.'
+    liked_by_you_and_someone: 'You and {{name}} like this.'
+    liked_by_you_and_others: 'Liked by you, {{joinedNames}} and {{name}}.'
+    liked_by_someone: '{{name}} likes this.'
+    liked_by_two_others: '{{name_1}} and {{name_2}} like this.'
+    liked_by_many_others: 'Liked by {{joinedNames}} and {{name}}.'
+
+    liked_by_name: 'Liked by {{name}}.'
+    liked_by_names_and_name: 'Liked by {{joinedNames}} and {{name}}.'
     started_by: 'Started by <strong>{{name}}</strong>'
 
   new_vote_item:
