--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -17,6 +17,7 @@ en:
     i_block: 'I block'
     submit_position: 'Submit position'
     change_position: 'Change position'
+    select_position: 'Select position'
     statement_placeholder: 'Share your thoughts with the group.'
 
   proposal_form:
@@ -28,7 +29,6 @@ en:
     closes_at_label: 'Closes at'
     details_label: 'Details'
     details_placeholder: "Give enough detail so everyone knows exactly what it means to agree or disagree or whatever"
-    
 
   proposal_card:
     your_position: 'Your Position'
@@ -36,6 +36,11 @@ en:
     started_by: 'Started by <strong>{{name}}</strong>'
     no_votes_yet: 'Nobody has voted on this proposal yet.'
     only_voter_is_you: 'No other members have voted yet.'
+
+  proposal_position_yes: 'Agree'
+  proposal_position_abstain: 'Abstain'
+  proposal_position_no: 'No'
+  proposal_position_block: 'Block'
 
   discussion:
     you_like_this: 'You like this.'
@@ -49,6 +54,8 @@ en:
     liked_by_names_and_name: 'Liked by {{joinedNames}} and {{name}}.'
     started_by: 'Started by <strong>{{name}}</strong>'
 
+  new_comment_item:
+    in_reply_to: '<strong>{{author}}</strong> in reply to <strong>{{recipient}}</strong>'
   new_vote_item:
     agree_on_proposal: '<strong>{{name}}</strong> agreed on the proposal:'
     abstain_on_proposal: '<strong>{{name}}</strong> abstained on the proposal:'
