--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -57,10 +57,14 @@ en:
   new_comment_item:
     in_reply_to: '<strong>{{author}}</strong> in reply to <strong>{{recipient}}</strong>'
   new_vote_item:
-    agree_on_proposal: '<strong>{{name}}</strong> agreed on the proposal:'
-    abstain_on_proposal: '<strong>{{name}}</strong> abstained on the proposal:'
-    disagree_on_proposal: '<strong>{{name}}</strong> disagreed on the proposal:'
-    block_on_proposal: '<strong>{{name}}</strong> blocked the proposal:'
+    agree: '<strong>{{name}}</strong> agreed.'
+    abstain: '<strong>{{name}}</strong> abstained.'
+    disagree: '<strong>{{name}}</strong> disagreed.'
+    block: '<strong>{{name}}</strong> blocked.'
+    agree_and_why: '<strong>{{name}}</strong> agreed:'
+    abstain_and_why: '<strong>{{name}}</strong> abstained:'
+    disagree_and_why: '<strong>{{name}}</strong> disagreed:'
+    block_and_why: '<strong>{{name}}</strong> blocked:'
 
   new_proposal_item:
     author_created_proposal: '<strong>{{name}}</strong> created a proposal:'
